# hri_client

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
include/hri_client/: hri_client.h
include/visca_interface/: visca_interface.h
launch/: hri_client.launch
msg/: Action.msg  ActionSequence.msg
src/hri_client/: hri_client.cpp
src/nodes/: hri_client_node.cpp
src/visca_interface/: visca_interface.cpp
