<?xml version="1.0"?>
<package>
  <name>hri_client</name>
  <version>0.0.0</version>
  <description>Client ROS node to interface all HRI activities for the pioneer robots with mounted VISCA interface cameras</description>
  <maintainer email="akatsila@nevada.unr.edu">Athanasia Katsila</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosaria</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rosaria</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
